# ultimate-team-mcp-server

./: .env-template  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
db/: fdu.db
specs/: fdu-v1.md
src/fdu_mcp_server/: __init__.py  cli.py  import_csv.py  server.py
src/fdu_mcp_server/modules/: constants.py  data_types.py  init_db.py
src/fdu_mcp_server/modules/functionality/: add_player.py  backup.py  import_players.py  list_players.py  remove_player.py
src/fdu_mcp_server/tests/: test_init_db.py
src/fdu_mcp_server/tests/functionality/: test_add_player.py  test_backup.py  test_list_players.py  test_remove_player.py
src/ultimate_mcp_server/: __init__.py  __main__.py  cli.py  server.py
src/ultimate_mcp_server/modules/: constants.py  data_types.py  init_db.py  utils.py
src/ultimate_mcp_server/modules/functionality/: __init__.py  add_federation_payment.py  add_player.py  add_tournament.py  clear_payment.py  import_players.py  list_federation_payments.py  list_player_tournaments.py  list_tournament_players.py  list_tournaments.py  mark_payment.py  register_player.py  remove_last_federation_payment.py  remove_player.py  remove_tournament.py  search_paid_players.py  unregister_player.py  update_tournament.py
tests/: conftest.py  test_add_player.py  test_backup.py  test_federation_payment.py  test_import_players.py  test_init_db.py  test_list_players.py  test_remove_player.py  test_search_paid_players.py  test_tournament.py  test_tournament_payment.py  test_tournament_player.py
