[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fdu-mcp-server"
version = "0.1.0"
description = "A Frisbee Team MCP server for managing players"
readme = "README.md"
authors = [{ name = "FDU Team" }]
requires-python = ">=3.8"
dependencies = [
    "click>=8.0.0",
    "mcp",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
fdu-mcp-server = "fdu_mcp_server:main"